; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ocd.c_bdm_restart_command.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ocd.c_bdm_restart_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ocd_desc = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Not connected to OCD device.\00", align 1
@OCD_RESET_RUN = common dso_local global i32 0, align 4
@last_run_status = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @bdm_restart_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bdm_restart_command(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* @ocd_desc, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = call i32 @error(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %2
  %12 = load i32, i32* @OCD_RESET_RUN, align 4
  %13 = call i32 @ocd_do_command(i32 %12, i32* %5, i32* %6)
  %14 = load i32, i32* %5, align 4
  store i32 %14, i32* @last_run_status, align 4
  %15 = call i32 (...) @clear_proceed_status()
  %16 = call i32 (...) @wait_for_inferior()
  %17 = call i32 (...) @normal_stop()
  ret void
}

declare dso_local i32 @error(i8*) #1

declare dso_local i32 @ocd_do_command(i32, i32*, i32*) #1

declare dso_local i32 @clear_proceed_status(...) #1

declare dso_local i32 @wait_for_inferior(...) #1

declare dso_local i32 @normal_stop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
